# MicroVMService

./: .gitignore  Dockerfile  README.md  config.py  docker-compose.yml  init  main.py  pyproject.toml  real_agent.py  requirements.txt
.claude/: settings.local.json
api/: routes.py
app/: main.py
app/api/: routes.py
app/core/: auth.py  config.py
app/models/: contracts.py
app/services/: analysis_engine.py  errors.py  ioc_detector.py  job_store.py  metrics.py  package_resolver.py  persistence.py  risk.py  telemetry.py
app/services/sandbox/: base.py  firecracker.py  firecracker_manager.py  generic.py  vm_lifecycle.py
models/: job.py
orchestrator/: queue.py  vm_runner.py
scripts/: fc_net_test.py  firecracker_smoke_test.py
storage/: job_store.py
tests/: test_contract.py  test_integration.py  test_ioc_detector.py
