[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dynamic-analysis-service"
version = "0.1.0"
description = "Production-ready dynamic analysis service for SentinelFlow compatibility"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.115.0,<1.0.0",
  "uvicorn[standard]>=0.30.0,<1.0.0",
  "gunicorn>=22.0.0,<23.0.0",
  "httpx>=0.27.0,<1.0.0",
  "asyncpg>=0.29.0,<1.0.0",
  "python-multipart>=0.0.9,<1.0.0",
  "pydantic>=2.8.0,<3.0.0",
  "pydantic-settings>=2.4.0,<3.0.0",
  "prometheus-client>=0.20.0,<1.0.0"
]

[project.optional-dependencies]
test = [
  "pytest>=8.3.0,<9.0.0",
  "pytest-asyncio>=0.23.0,<1.0.0"
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
asyncio_mode = "auto"
